--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,42 @@
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
 
+#video-chat {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#myVideo {
+    width: 300px;
+    height: 200px;
+    margin-bottom: 10px;
+}
+
+#remoteVideos video {
+    width: 300px;
+    height: 200px;
+    margin: 5px;
+}
+
+#chatroom {
+    margin-top: 20px;
+}
+
+input[type="text"] {
+    padding: 5px;
+    width: 300px;
+    margin-right: 10px;
+}
+
+button {
+    padding: 5px;
+}
+
+#messages {
+    margin-top: 20px;
+    text-align: left;
+    width: 100%;
+}
